--- a/estilos.css
+++ b/estilos.css
@@ -5,19 +5,24 @@
 	margin: 0px;
 	padding: 0px;
 	list-style: none;
+	text-decoration: none;
 }
 
 /*------------------HEADER-------------------*/
 
 header {
 	background-color: #508B59;
-	height: 60px;
+	height: 80px;
 	width: 100%;
 	display: flex;
     align-items: center;
     justify-content: flex-end;
+	position: fixed;
 }
 
+header div {
+	justify-content: flex-start
+}
 
 header nav ul li {
 	color: white;
@@ -25,11 +30,13 @@ header nav ul li {
 	display: inline;
 	align-items: center;
 	margin-top: 10px;
+	padding-left: 60px;
+	font-size: 1.5em;
 }
 
-.botonera1 {
+.botoneraheader {
 	display: flex;
-	padding-right: 20px;
+	padding-right: 60px;
 }
 
 /*------------------MAIN-------------------*/
@@ -37,6 +44,11 @@ header nav ul li {
 main {
 	display: flex;
 	flex-direction: row;
+	background-image: url("img/forma fondo.jpg");
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	background-size: 100% auto;
+	height: inherit;
 }
 
 .columnaizq {
@@ -46,40 +58,42 @@ main {
 .columnader {
 	width: 60%;
 	text-align: center;
-	padding-top: 60px;
+	padding-top: 200px;
 	padding-right: 120px;
 	padding-left: 120px;
 		
 }
 
-
+main div img{
+	padding-top: 200px;
+	padding-left: 80px;
+}
 
 .registro {
 	display: inline;
-	
+	font-family: 'Original Surfer', cursive;
+	color: white;
+	font-size: 2em;
+	background-color: #EC881D;
 }
 
 main h1, h2 {
 	font-family: 'Original Surfer', cursive;
 	color: #EC881D;
-	font-size: 3em;
+	font-size: 3.5em;
 	padding-bottom: 15px;
 }
 
 main h2 {
-	font-size: 2em;
+	font-size: 3em;
 
 }
 
 main p {
 	font-family: 'Inika', serif;
 	color: #508B59;
-	font-size: 1.2em;
+	font-size: 1.6em;
 	padding-bottom: 80px;
-}
-
-main nav ul li {
-	background-color: #EC881D;
 }
 
 article {
