--- a/estilos.css
+++ b/estilos.css
@@ -54,7 +54,7 @@ header nav ul li {
 	
 }
 
-nav li:hover> ul{
+nav li:hover ul{
 	display: block;
 }
 
@@ -66,20 +66,76 @@ nav li:hover> ul{
 	padding-left: 60px;
 }
 
+/*------------------MAIN GENERAL-------------------*/
 
-/*------------------MAIN-------------------*/
-section {
-	display: flex;
-	flex-direction:row;
-}
-main {
-	max-width: 100%;
+
+h1 {
+	font-family: 'Original Surfer', cursive;
+	color: #EC881D;
+	font-size: 2.5em;
+	padding-top: 40px;
+	padding-bottom: 20px;
 	
-	background-image: url("img/forma fondo.jpg");
-	background-repeat: no-repeat;
-	background-attachment: scroll;
-	background-size: 100% auto;
-	height: inherit;
+}
+
+h2 {
+	font-family: 'Original Surfer', cursive;
+	color: #EC881D;
+	font-size: 2em;
+	padding-top: 40px;
+	padding-bottom: 20px;
+}
+
+h3 {
+	font-family: 'Original Surfer', cursive;
+	color: #508B59;
+	font-size: 1.8em;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: center;
+	flex-direction: row;
+}
+
+
+h4 {
+	font-family:'open-sans', "Alegreya Sans";
+	color: white;
+	font-size: 1em;
+	padding-bottom: 10px;
+}
+
+h5 {
+	font-family:'open-sans', "Alegreya Sans";
+	font-size: 0.8em;
+	color: white;
+}
+
+h6 {
+	font-family: 'Original Surfer', cursive;
+	color: #EC881D;
+	font-size: 1.2em;
+	padding-bottom: 10px;
+}
+
+h7 {
+	font-family:'open-sans', "Alegreya Sans";
+	color: #508B59;
+	font-size: 1em;
+	font-weight: 700;
+}
+
+h8 {
+	font-family:'open-sans', "Alegreya Sans";
+	color: #508B59;
+	font-size: 1em;
+}
+
+p {
+	font-family: 'Inika', serif;
+	color: #508B59;
+	font-size: 1.2em;
+	padding-bottom: 60px;
+	padding-top: 40px;
 }
 
 .columnaizq {
@@ -87,12 +143,29 @@ main {
 	align-content: center;
 }
 
-.columnader  {
+.columnader {
 	width: 100%;
 	text-align: center;
 	padding-top: 100px;	
-	
+	justify-content: center;
 }
+
+/*------------------MAIN INICIO-------------------*/
+.sectionbienvenida {
+	display: flex;
+	flex-direction:row;
+}
+
+.maininicio{
+	max-width: 100%;
+	background-image: url("img/forma fondo.jpg");
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	background-size: 100% auto;
+	height: inherit;
+}
+
+
 
 .botonera {
 	display: inline;
@@ -110,11 +183,6 @@ main {
 	background: #EC881D;
 	color: white;
 	cursor: pointer;
-}
-
-main div img{
-	align-content: center;
-	
 }
 
 .registro {
@@ -142,27 +210,15 @@ main div img{
 	
 }
 
-main h1, h2 {
-	font-family: 'Original Surfer', cursive;
-	color: #EC881D;
-	font-size: 2.5em;
-	padding-bottom: 15px;
-	
-}
-
- h2 {
-	font-size: 2em;
-	padding-top:140px;
-}
-
-main p {
-	font-family: 'Inika', serif;
-	color: #508B59;
+.textoquepodesencontrar {
 	width: 60%;
-	font-size: 1.2em;
-	padding-bottom: 60px;
-	padding-top: 40px;
 }
+
+.textosabesloquees {
+	width: 80%;
+}
+
+
 
 .circulos {
 	display:flex;
@@ -171,53 +227,97 @@ main p {
 	justify-content: space-evenly;
 	padding-top: 50px;
 	padding-bottom: 100px;
-		
+	align-content: center;
 }
 
-.contenedorresto h3 {
-	color:white;
-}
-.textoinicio p {
-	width:80%;
-}
+
 article {
 	display:flex;
 	flex-direction: column;
 }
 
-.logo {
-	justify-content: center;
+/*------------------MAIN RESTAURANTES-------------------*/
+
+.mainrestaurantes {
+	display: flex;
+	flex-direction:row;
+}
+
+.aside {
+	width: 25%;
+	Height: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content:flex-start;
+	align-items:center;
+	padding:10px;
+	background:#EC881D;
 	padding-top: 150px;
-	padding-left:80px;
 }
 
-h3 {
-	font-family: 'Original Surfer', cursive;
-	font-size:2em;
-	color:#508B59;
-	text-align: center;
-	flex-direction: row;
-}
-
-h4{
+.bold{
 	font-size: 1em;
-	padding-bottom: 10px;
+	font-weight: 700;
+}
+
+.restaurante {
+	width:65%;
+	height:290px;
+	background: #F9EEE6;
+	border-radius:18px;
+	padding:10px;
+}
+
+.datos{
+	width:70%;
+	height:120px;
+	border-radius:15px;
+	background: #F9EEE6;
+	padding:20px;
+	margin:15px;
+}
+.horario{
+	width:70%;
+	height:110px;
+	border-radius:18px;
+	background: #F9EEE6;
+	padding:20px;
+	margin:15px;
+}
+.comentarios{
+	width:70%;
+	height:270px;
+	border-radius:18px;
+	background: #F9EEE6;
+	padding:20px;
+	margin:15px;
+}
+
+.boton{
+	width: 30%;
+	height: 30px;
+	background:#EC881D;
+	border:none;
+	border-radius:20px;
+	color: white;
+	font-family: "Original Surfer",cursive;
+	cursor: pointer;
 }
 
 
 
 /*------------------FOOTER-------------------*/
-
 footer {
 	background-color: #EC881D;
+	height: 80px;
 	font-family:'open-sans', "Alegreya Sans";
+	font-size:1em;
 	color: white;
 	width: 100%;
+	padding:10px;
 	display: flex;
 	justify-content: space-around;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	font-size: 0.8em;
+
 }
 
 a {
