--- a/estilos.css
+++ b/estilos.css
@@ -13,6 +13,20 @@ a {
 	color: white;
 }
 
+.flex-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+}
+
+.paddingleft {
+	padding-left: 120px;
+}
+
 /*------------------HEADER-------------------*/
 
 header {
@@ -51,6 +65,8 @@ header nav ul li {
 	position: absolute;
 	flex-direction: column;
 	top: 55px;
+	background-color: #508B59;
+	
 	
 }
 
@@ -61,6 +77,8 @@ nav li:hover .opciones{
 nav li .opciones {
 	display: none;
 }
+
+
 
 .botoneraheader {
 	display: flex;
@@ -131,14 +149,15 @@ h8 {
 	font-family:'open-sans', "Alegreya Sans";
 	color: #508B59;
 	font-size: 1em;
+
 }
 
 p {
 	font-family: 'Inika', serif;
 	color: #508B59;
 	font-size: 1.2em;
-	padding-bottom: 60px;
-	padding-top: 40px;
+	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
 .columnaizq {
@@ -147,7 +166,7 @@ p {
 }
 
 .columnader {
-	width:100%;
+	width: 100%;
 	text-align: center;
 	padding-top: 100px;
 	justify-content: center;
@@ -155,12 +174,9 @@ p {
 
 /*------------------MAIN INICIO-------------------*/
 
-.sectionbienvenida {
-	display: flex;
-	flex-direction:row;
-}
 
-.maininicio{
+
+.maincolumnas{
 	max-width: 100%;
 	background-image: url("img/forma fondo.jpg");
 	background-repeat: no-repeat;
@@ -189,7 +205,6 @@ p {
 }
 
 .registro {
-	display:flex;
 	justify-content: space-evenly;
 	font-family: 'Original Surfer', cursive;
 	color: white;
@@ -197,21 +212,16 @@ p {
 	padding-top: 30px;
 	}
 
-.botonizq {
+.boton {
 	background-color: #EC881D;
-	border-radius:30px;
+	border-radius: 30px;
 	border:none;
-	padding: 5px 10px 10px 10px;
-}
-
-.botonderech {
-	background-color: #EC881D;
-	border-radius:30px;
-	padding-bottom:30px;
-	border:none;
-	padding: 5px 10px 10px;
+	padding-left: 35px;
+	padding-right: 35px;
+	height: 45px;
 	
 }
+
 
 .textoquepodesencontrar {
 	width: 60%;
@@ -224,8 +234,6 @@ p {
 }
 
 .circulos {
-	display:flex;
-	flex-direction: row;
 	width: 100%;
 	justify-content: space-evenly;
 	padding-top: 50px;
@@ -242,7 +250,17 @@ article {
 
 .mainrestaurantes {
 	display: flex;
-	flex-direction:row;
+	flex-direction: column;
+}
+
+.imgprincipalsintaxis {
+	width: 100% !important;
+	height: auto;
+}
+
+.sintaxis2 {
+	display: flex;
+	flex-direction: row;
 }
 
 .aside {
@@ -254,7 +272,6 @@ article {
 	align-items:center;
 	padding:10px;
 	background:#EC881D;
-	padding-top: 450px;
 }
 
 .bold{
@@ -263,7 +280,7 @@ article {
 }
 
 .restaurante {
-	width:65%;
+	width: 85%;
 	height:290px;
 	background: #F9EEE6;
 	border-radius:18px;
@@ -276,7 +293,7 @@ article {
 }
 .datos{
 	width:70%;
-	height:120px;
+	height: 80px;
 	border-radius:15px;
 	background: #F9EEE6;
 	padding:20px;
@@ -286,11 +303,13 @@ article {
 }
 .horario{
 	width:70%;
-	height:110px;
+	height:130px;
 	border-radius:18px;
 	background: #F9EEE6;
 	padding:20px;
 	margin:15px;
+	display: flex;
+	flex-direction: column;
 }
 .comentarios{
 	width:70%;
@@ -303,26 +322,18 @@ article {
 	flex-direction: column;
 }
 
-.boton{
-	width: 30%;
-	height: 30px;
+.botonverforo{
+	height: 15px;
 	background:#EC881D;
 	border:none;
-	border-radius:20px;
 	color: white;
 	font-family: "Original Surfer",cursive;
 	cursor: pointer;
+	padding-left: 25px;
+	padding-right: 25px;
 }
 
-.sintaxis{
-	text-align: start;
-	padding-left:200px;
-	padding-top: 30px;
-}
-.mapa, .carrusel {
-	padding-bottom: 200px;
-	padding-left:200px;
-}
+
 /*------------------ MAIN RECETAS-------------------*/
 
 
