--- a/estilos-formularios.css
+++ b/estilos-formularios.css
@@ -23,9 +23,8 @@ main{
 	margin-top:80px;
 	font-family:"Inika", serif;
 }
-h1{
-	color:white;
-	font-size:1.8em;
+label{
+	font-size:1.2em;
 	padding-bottom: 5px;
 	padding-top: 10px;
 }
@@ -38,16 +37,10 @@ h1{
 	border:none;
 	font-size:1.2em;
 }
-input type{
+input type, label{
 	color:white;
 } 
-p{
-	color:white;
-	font-size:1.2em;
-	padding-bottom: 50px;
-}
-
-.Boton{
+.Boton-registrarse{
 	width:40%;
 	height:60px;
 	border-radius:30px;
@@ -57,4 +50,8 @@ p{
 	border:none;
 	font-size:1.5em;
 	font-family:"Original Surfer",cursive;
+	margin-top: 20px;
+}
+hr{
+	margin-top:20px;
 }
