--- a/estilos-iniciar-sesion.css
+++ b/estilos-iniciar-sesion.css
@@ -11,38 +11,30 @@ body{
 
 main{
 	display:flex;
-	flex-direction:row;
+	flex-direction: row;
+	font-family:"Inika", serif;
 }
+
 .logo{
 	width:40%;
 	margin:130px;
 }
 .Formulario-inicio{
-	width:60%;
+	width: 60%;
+	height: auto; 
 	padding-bottom:30px;
 	padding-right:120px;
-	margin-top:80px;
-	font-family:"Inika", serif;
+	margin-top:90px;
 }
-h1{
-	color:white;
-	font-size: 1.8em;
-}
+
 .Controles{
-	width:60%;
 	background:#EC881D;
 	padding:10px;
 	margin-bottom:16px;
-	font-family:"Inika", serif;
 	border:none;
 	font-size:1.2em;
 }
-p{
-	color:white;
-	font-size:1.2em;
-	padding-bottom: 50px;
-}
-.Boton{
+.Boton-iniciarsesion{
 	width:40%;
 	height:60px;
 	border-radius:30px;
@@ -52,4 +44,25 @@ p{
 	border:none;
 	font-size:1.5em;
 	font-family:"Original Surfer",cursive;
+	margin-top:10px;
+	cursor:pointer;
+}
+.olvidaste-contraseña, label{
+	color:white;
+}
+label{
+	font-size:1.5em;
+	margin-bottom:20px;
+}
+.olvidaste-contraseña{
+	text-decoration:none;
+	background: #EC881D;
+	border: none;
+	font-size:1.2em;
+	padding-bottom: 50px;
+	margin-top:20px;
+	cursor: pointer;
+}
+hr{
+	margin-top:20px;
 }
