--- a/estilos.css
+++ b/estilos.css
@@ -27,7 +27,9 @@ a {
 	padding-left: 120px;
 }
 
+
 /*------------------HEADER-------------------*/
+
 
 header {
 	background-color: #508B59;
@@ -58,6 +60,10 @@ header nav ul li {
 	justify-content: flex-end;
 	padding-left: 5px;
 	
+}
+
+.logobotonera{
+	padding-left: 25px;
 }
 
 .opciones{
@@ -98,7 +104,9 @@ nav li .opciones {
 .botoneraheader ul li{
 	cursor: pointer;
 }
+
 /*------------------MAIN GENERAL-------------------*/
+
 
 h1 {
 	font-family: 'Original Surfer', cursive;
@@ -113,7 +121,7 @@ h2 {
 	font-family: 'Original Surfer', cursive;
 	color: #EC881D;
 	font-size: 2em;
-	padding-top: 130px;
+	padding-top: 140px;
 	padding-bottom: 20px;
 	width: 90%;
 }
@@ -182,8 +190,8 @@ p {
 	justify-content: center;
 }
 
-/*------------------MAIN INICIO-------------------*/
 
+/*------------------MAIN INICIO-------------------*/
 
 
 .maincolumnas{
@@ -228,19 +236,21 @@ p {
 	border:none;
 	padding-left: 35px;
 	padding-right: 35px;
+	padding-top: 10px;
 	height: 45px;
 	
 }
 
-
 .textoquepodesencontrar {
 	width: 60%;
 	margin-left: 100px;
+	padding-bottom: 80px;
 }
 
 .textosabesloquees {
 	width: 80%;
 	margin-left: 25px;
+	padding-bottom: 90px;
 }
 
 .circulos {
@@ -256,7 +266,18 @@ article {
 	flex-direction: column;
 }
 
+.graciasporunirte{
+	font-size: 3em;
+	padding-top: 140px;
+}
+
+.contaminacionbienvenido{
+	padding-top: 30px;
+	padding-left: 100px;
+}
+
 /*------------------MAIN SINTAXIS PALERMO-------------------*/
+
 
 .mainrestaurantes {
 	display: flex;
@@ -354,6 +375,7 @@ article {
 
 /*------------------ MAIN FORO-------------------*/
 
+
 .forobienvenido{
 	width: 100%;
 	text-align: center;
@@ -367,7 +389,9 @@ article {
 	font-size: 3em;
 	padding: 0px;
 }
+
 /*------------------FOOTER-------------------*/
+
 
 footer {
 	background-color: #EC881D;
