--- a/estilos.css
+++ b/estilos.css
@@ -389,6 +389,22 @@ article {
 	font-size: 3em;
 	padding: 0px;
 }
+.preguntas a{
+	width:15%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	color:white;
+	background-color:#508B59;
+	border-radius:30px;
+}
+.sitios a{
+	width:8%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	color:white;
+	background-color:#508B59;
+	border-radius:30px;
+}
 
 /*------------------FOOTER-------------------*/
 
