--- a/estilos.css
+++ b/estilos.css
@@ -121,7 +121,7 @@ h2 {
 	font-family: 'Original Surfer', cursive;
 	color: #EC881D;
 	font-size: 2em;
-	padding-top: 140px;
+	padding-top: 100px;
 	padding-bottom: 20px;
 	width: 90%;
 }
@@ -186,10 +186,17 @@ p {
 .columnader {
 	width: 100%;
 	text-align: center;
-	padding-top: 100px;
+	padding-top: 150px;
 	justify-content: center;
 }
 
+.letrasblancas {
+	color: white;
+}
+
+.letrasnaranjas {
+	color: #EC881D;
+}
 
 /*------------------MAIN INICIO-------------------*/
 
@@ -266,32 +273,33 @@ article {
 	flex-direction: column;
 }
 
-.graciasporunirte{
-	font-size: 3em;
-	padding-top: 140px;
+
+
+/*------------------MAIN RESTAURANTES-------------------*/
+
+.maincards {
+	padding-top: 60px;
 }
 
-.contaminacionbienvenido{
-	padding-top: 30px;
-	padding-left: 100px;
+.cards {
+	align-items: center;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+.sectioncards {
+	padding: 40px 50px 30px 50px;
+	justify-content: space-around;
 }
 
 /*------------------MAIN SINTAXIS PALERMO-------------------*/
 
 
-.mainrestaurantes {
-	display: flex;
-	flex-direction: column;
-}
+
 
 .imgprincipalsintaxis {
 	width: 100% !important;
 	height: auto;
-}
-
-.sintaxis2 {
-	display: flex;
-	flex-direction: row;
 }
 
 .aside {
@@ -380,10 +388,6 @@ article {
 	color:#508B59;
 }
 
-.receta h3{
-	color:#508B59;
-	font-size:4em;
-}
 /*------------------ MAIN FORO-------------------*/
 
 
@@ -399,9 +403,7 @@ article {
 	font-size: 3em;
 	padding: 0px;
 }
-h3{
-	color:#EC881D;
-}
+
 .sitios p{
 	color:#EC881D;
 }
@@ -433,9 +435,7 @@ h3{
 	background-color:#508B59;
 	border-radius:30px;
 }
-article {
-	background-color: #FDF5EA;
-}
+
 .personas{
 	height:160px;
 	border:solid;
