--- a/estilos.css
+++ b/estilos.css
@@ -152,6 +152,7 @@ h6 {
 	color: #EC881D;
 	font-size: 1.2em;
 	padding-bottom: 10px;
+	padding-top: 5px;
 }
 
 h7 {
@@ -165,6 +166,7 @@ h8 {
 	font-family:'open-sans', "Alegreya Sans";
 	color: #508B59;
 	font-size: 1em;
+	padding-bottom: 15px;
 
 }
 
@@ -179,7 +181,7 @@ p {
 h11 {
 	font-family: 'Original Surfer', cursive;
 	color: #EC881D;
-	font-size: 2em;
+	font-size: 1.7em;
 	padding-top: 40px;
 	padding-bottom: 20px;
 }
@@ -292,10 +294,11 @@ article {
 
 /*------------------INICIAR SESION REGISTRARSE-------------------*/
 
-main{
+.ingresar{
 	display:flex;
 	flex-direction: row;
 	font-family:"Inika", serif;
+	background: #EC881D;
 }
 
 .logo{
@@ -409,12 +412,13 @@ input type, label{
 	align-items: center;
 	padding-left: 30px;
 	padding-right: 30px;
+	text-align: center;
 }
 
 .selecciondeimagenes:hover {
-    border:10px solid;
-    border-radius:100%;
-    border-color: #508B59;
+	border:10px solid;
+	border-radius:100%;
+	border-color: #508B59;
 }
 
 .sectioncards {
@@ -474,7 +478,7 @@ input type, label{
 }
 .horario{
 	width:70%;
-	height:130px;
+	height:160px;
 	border-radius:18px;
 	background: #F9EEE6;
 	padding:20px;
@@ -484,7 +488,7 @@ input type, label{
 }
 .comentarios{
 	width:70%;
-	height:270px;
+	height:340px;
 	border-radius:18px;
 	background: #F9EEE6;
 	padding:20px;
@@ -494,7 +498,7 @@ input type, label{
 }
 
 .botonverforo{
-	width:35%;
+	width:50%;
 	height: 15px;
 	background: #EC881D;
 	border:none;
@@ -502,20 +506,41 @@ input type, label{
 	color: white;
 	font-family: "Original Surfer",cursive;
 	cursor: pointer;
-	padding-left: 25px;
-	padding-right: 25px;
+	padding-left: 15px;
+	padding-right: 35px;
 	padding-top:5px;
-	padding-bottom:5px;
+	padding-bottom:10px;
 }
 
-
-/*------------------ MAIN RECETAS DULCES-------------------*/
+.mapa{
+	padding-bottom: 150px;
+}
 
 
 /*----------------- MAIN PIZZA-------------------*/
 .información ul{
 	color: #508B59;
 }
+
+.pasos{
+	padding-top: 0px;
+}
+
+.ingredientes{
+	width:70%;
+	height:500px;
+	border-radius:18px;
+	background: #F9EEE6;
+	padding:20px;
+	margin:15px;
+	display: flex;
+	flex-direction: column;
+}
+
+.anteriorsiguiente{
+	
+}
+
 
 /*------------------ MAIN FORO-------------------*/
 
@@ -531,13 +556,13 @@ h9 {
 	font-size: 1.2em;
 	width: 60%;
 	text-align: center;
-    padding-top: 40px;
+	padding-top: 40px;
 }
 
 .introforo {
 	display: flex;
-    flex-direction: column;
-    align-items: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 .foro {
@@ -590,8 +615,8 @@ h10 {
 	background-color:#508B59;
 	border-radius:30px;
 	display: flex;
-    align-items: center;
-    justify-content: center;
+	align-items: center;
+	justify-content: center;
 	margin-top: 50px;
 }
 
