--- a/estilos.css
+++ b/estilos.css
@@ -523,30 +523,35 @@ input type, label{
 	color: #508B59;
 }
 
-<<<<<<< HEAD
+
 .imgprincipalpizza {
 	width: 100% !important;
 	height: auto;
 }
 
-.ladoizqpizza {
-	background-color:#EC881D;
-	width:70%;
-}
-.ingredientes {
-	width:70%;
-	height:400px;
-	border-radius:18px;
-	background: #F9EEE6;
-	padding:20px;
-	padding-top:40px;
-	margin:15px;
-	
-}
+
 .comentarios{
 	width:70%;
 	height:270px;
-=======
+	padding-bottom: 100px;
+	}
+
+.comentarios label {
+	
+font-family:'open-sans', "Alegreya Sans";
+color: #508B59;
+font-size: 1em;
+}
+
+#Mensaje {
+
+border-radius: 30px;
+border:none;
+padding-left: 10px;
+padding-right: 10px;
+padding-top: 30px;
+height: 45px;
+}
 .pasos{
 	padding-top: 0px;
 }
@@ -554,26 +559,33 @@ input type, label{
 .ingredientes{
 	width:70%;
 	height:500px;
->>>>>>> 2d3efb1ce0ce848db4664f0c9905f4c4d822b042
+
 	border-radius:18px;
 	background: #F9EEE6;
 	padding:20px;
 	margin:15px;
 	display: flex;
 	flex-direction: column;
-<<<<<<< HEAD
-	
-	
-}
-=======
+
 }
 
-.anteriorsiguiente{
-	
+.aside {
+width: 30%;
+Height: auto;
+display: flex;
+flex-direction: column;
+justify-content:flex-start;
+align-items:center;
+padding:10px;
+background: #EC881D;
 }
 
+.flex-column {
+	width: 70%;
+	
+} 
 
->>>>>>> 2d3efb1ce0ce848db4664f0c9905f4c4d822b042
+
 /*------------------ MAIN FORO-------------------*/
 
 #encabezadoforo {
