--- a/estilos.css
+++ b/estilos.css
@@ -27,6 +27,27 @@ a {
 	padding-left: 120px;
 }
 
+.anteriorsiguiente {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 50px;
+}
+
+.botonantsig {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border: 2px solid #FFFFFF;
+	border-radius: 30px;
+	padding: 10px;
+}
+
+.botonantsig:hover {
+	border: 2px solid #508B59;
+	border-radius: 30px;
+	padding: 10px;
+}
 
 /*------------------HEADER-------------------*/
 
@@ -405,6 +426,7 @@ input type, label{
 
 .maincards {
 	padding-top: 60px;
+	padding-bottom: 60px;
 	background-color: white;
 }
 
@@ -413,6 +435,12 @@ input type, label{
 	padding-left: 30px;
 	padding-right: 30px;
 	text-align: center;
+}
+
+.selecciondeimagenes {
+	border:10px solid;
+	border-radius:100%;
+	border-color: #FFFFFF;
 }
 
 .selecciondeimagenes:hover {
@@ -549,7 +577,7 @@ border-radius: 30px;
 border:none;
 padding-left: 10px;
 padding-right: 10px;
-padding-top: 30px;
+margin-top: 10px;
 height: 45px;
 }
 .pasos{
@@ -580,13 +608,34 @@ padding:10px;
 background: #EC881D;
 }
 
-.flex-column {
-	width: 70%;
-	
-} 
+
 
 
 /*------------------ MAIN FORO-------------------*/
+
+.globo {
+	position: absolute; 
+	left: 150px;
+	animation-name: globo;
+	animation-duration: 2s;
+	animation-direction: alternate;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in;
+	animation-play-state: running;
+}
+
+@keyframes globo {
+	to { 
+	padding-top: 50px;}
+}
+
+#pregunta {
+	width: 660px;
+	height: 50px;
+	border-radius: 30px;
+	border-color: none;
+}
+
 
 #encabezadoforo {
 	
